<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Login_and_Before.LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/shr_logo"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="100dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="16sp" android:textColor="@color/colorPrimary"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:theme="@style/TIL"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_email" android:textColorHint="@color/colorPrimary">

            <AutoCompleteTextView
                    android:id="@+id/email_edit_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/password_text_input"
                android:theme="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_password"
                app:errorEnabled="true" android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <android.support.design.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/shr_button_login" app:backgroundTint="@color/colorPrimaryDark"
            />


        </RelativeLayout>

        <Button android:id="@+id/to_reg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/shr_button_register"
                style="@style/Widget.AppCompat.Button.Borderless" app:backgroundTint="@android:color/transparent"
                android:background="@android:color/transparent" android:textSize="15sp"/>
        <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fpass"
                android:textColor="#808080"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:textSize="16dp"/>
    </LinearLayout>
</ScrollView>
