<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".Login_and_Before.Welcome">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">
        <TextView
                android:text="@string/wel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
        />
        <TextView
                android:text="@string/welcome_message"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textAlignment="center"

                android:textColor="@color/colorAccent"
        />
        <android.support.design.button.MaterialButton
                android:id="@+id/welcome_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_accepted"
                android:layout_marginTop="250dp"
                app:backgroundTint="@color/colorPrimaryDark"
                android:textAllCaps="false"/>
    </LinearLayout>
</ScrollView>