<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Login_and_Before.TermsConditions">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="40dp"
            android:layout_marginTop="100dp">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/email_validation"
                  android:textSize="16dp"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/access_code_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_access_code"
                app:errorEnabled="true">


            <android.support.design.widget.TextInputEditText
                    android:id="@+id/access_code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="5dp"
                  android:text="@string/send_another"
                  android:gravity="center"
                  android:textColor="@android:color/holo_red_dark"
                  android:textStyle="italic"
                  android:id="@+id/send_another"/>
        <android.support.design.button.MaterialButton
                android:id="@+id/confirm_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="confirm"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                app:backgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>
</ScrollView>