<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Login_and_Before.Register">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:background="@drawable/shape_others"
            android:padding="24dp"
            android:paddingTop="16dp" android:id="@+id/register_layout">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:text="@string/caccount"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:textSize="16sp"/>
        <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/shaggy"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorGray"
                android:layout_gravity="center"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/fname_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TIL"
                android:hint="@string/shr_hint_fname" android:textColorHint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_fname_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" android:textColor="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/lname_text_input"
                android:theme="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_lname" android:textColorHint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_lname_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" android:textColor="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/mname_text_input"
                android:theme="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Middle Name" android:textColorHint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_mname_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" android:textColor="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <android.support.design.button.MaterialButton
                    android:id="@+id/date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/shr_button_date" app:backgroundTint="@color/colorPrimaryDark"/>

            />
            <EditText android:layout_width="80dp" android:layout_height="wrap_content"
                      android:id="@+id/datetext"
                      android:focusable="false"
                      android:longClickable="false"
                      android:textSize="13sp" android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TIL"
                android:layout_height="wrap_content"
                android:id="@+id/signup_con_text_input"
                android:hint="Contact #" android:textColorHint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" android:id="@+id/signup_con_edit_text"
                    android:textColor="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:theme="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_email_text_input"
                android:hint="@string/shr_hint_email" android:textColorHint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" android:id="@+id/signup_email_edit_text"
                    android:textColor="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_pass_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TIL"
                android:hint="@string/shr_hint_password"
                app:errorEnabled="true" android:textColorHint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_pass_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" android:textColor="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
                android:id="@+id/terms_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/s_terms" android:textColor="#A9A9A9"/>
        <android.support.design.button.MaterialButton
                android:id="@+id/Sign_Up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/shr_button_signup" app:backgroundTint="@color/colorPrimaryDark"/>

    </LinearLayout>
    <!--<android.support.v7.widget.AlertDialogLayout-->
    <!--android:id="@+id/code_alert"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--<TextView android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/code_message"-->
    <!--/>-->
    <!--</android.support.v7.widget.AlertDialogLayout>-->
</ScrollView>